[package]
name = "debuggerRust"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-threading = "0.2.1"
rust-sitter = "0.4.5"

[build-dependencies]
rust-sitter-tool = "0.4.5"

[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Environment",
    "Win32_System_WindowsProgramming",
]
